==> ehealthinnovation/ECG_Hardware/source/ADS1x9x_ECG_Recorder_FW/SRC/ADS1x9x.c <==
#include "..\Common\device.h"
#include "..\Common\types.h"          // Basic Type declarations
#include "ADS1x9x_main.h"
#include "ADS1x9x.h"
#include "ADS1x9x_Nand_Flash.h"
#include "ADS1x9x_USB_Communication.h"
#define DELAY_COUNT 2

void ADS1x9x_Reset(void)
  {
	  	unsigned short i;
	    P8OUT |= (enum PORT8_ADC_CONTROL)ADC_RESET;		// Set High
	    /* Provide suficient dealy*/
	    for(i= 0;	i < 5000; i++);						// Wait 1 mSec
	    P8OUT &= ~(enum PORT8_ADC_CONTROL)ADC_RESET;	// Set to low
	    for(i= 0;	i < 5000; i++);					    // Wait 1 mSec
	    P8OUT |= (enum PORT8_ADC_CONTROL)ADC_RESET;		// Set High
	    for(i= 0;	i < 35000; i++);
    }

void ADS1x9x_Disable_Start(void)
{
	unsigned short i;
    P8OUT &= ~(enum PORT8_ADC_CONTROL)ADC_START;	// Set to LOW
    for(i=0; i<35000; i++);        					// Small Delay to settle   
}

void ADS1x9x_Enable_Start(void)
{
	unsigned short i;
    P8OUT |= (enum PORT8_ADC_CONTROL)ADC_START;		// Set to High
    for(i=0; i<50000; i++);        					// Small Delay to settle   
}

void Set_ADS1x9x_Chip_Enable (void)
{
	/* ADS1x9x CS is Active low*/
	P8OUT &= ~(enum PORT8_ADC_CONTROL)ADC_CS;		// Set to LOW
}

void Clear_ADS1x9x_Chip_Enable (void)
  {
  	unsigned char CsDelay;
  	
  	for ( CsDelay = 0;  CsDelay < 100 ;CsDelay++);
	/* ADS1x9x CS is Active low*/
	P8OUT |= (enum PORT8_ADC_CONTROL)ADC_CS;		// Set to High
  }

void Init_ADS1x9x_DRDY_Interrupt (void)
{
	
	  P1DIR &= ~0x02;
	  P1REN |= BIT1;                            	// Enable P1.1 internal resistance
	  P1OUT |= BIT1;                            	// Set P1.1 as pull-Up resistance
	  P1IES |= BIT1;                           		// P1.1 Lo/Hi edge
	  P1IFG &= ~BIT1;                           	// P1.1 IFG cleared
	  P1IE &= ~BIT1;                             	// P1.1 interrupt disabled
	
}

void Enable_ADS1x9x_DRDY_Interrupt (void)
{
	  P1IFG &= ~BIT1;                           	// P1.1 IFG cleared
	  P1IE |= BIT1;                             	// P1.1 interrupt enabled
}

void Disable_ADS1x9x_DRDY_Interrupt (void)
{
	  P1IFG &= ~BIT1;                           	// P1.1 IFG cleared
	  P1IE &= ~BIT1;                             	// P1.1 interrupt disabled
}

void Set_GPIO(void)
{
	
	  P2SEL = 0x00;                            
	  P2DIR |= 0x8F;
	  P2OUT |= (enum PORT2_ADC_CONTROL)POW_CE;                            
	  P8DIR |= 0x07;       
	  P8OUT &= 0xF8;
	  P8OUT |= (enum PORT8_ADC_CONTROL)ADC_CS;		// Set RESET, START to Low and CS to High
	  P8OUT |= (enum PORT8_ADC_CONTROL)ADC_RESET;	// Set RESET, START to Low and CS to High
	  P2OUT = 0x03;
	  //dataCnt = 0;

}

void ADS1x9x_SPI_Command_Data(unsigned char Data)
{
	unsigned char delayVar;
	Set_ADS1x9x_Chip_Enable();
	for (delayVar = 0; delayVar < 50; delayVar++);
	Clear_ADS1x9x_Chip_Enable();
	Set_ADS1x9x_Chip_Enable();
	
	UCB0TXBUF = Data;                                     // Send the data sitting at the pointer DATA to the TX Buffer
 	while ( (UCB0STAT & UCBUSY) );

	delayVar = UCB0RXBUF;

	for (delayVar = 0; delayVar < 150; delayVar++);

}

void Hard_Start_ReStart_ADS1x9x(void)
  {
	P8OUT |= (enum PORT8_ADC_CONTROL)ADC_START;			// Set Start pin to High
  }

void Hard_Stop_ADS1x9x (void)
  {
  	unsigned short i, j;
    P8OUT &= ~(enum PORT8_ADC_CONTROL)ADC_START;		// Set Start pin to Low
    for (j = 0; j < DELAY_COUNT; j++)
    {
    	for ( i=0; i < 35000; i++);
    }
  }

void ADS1x9x_Reg_Write (unsigned char READ_WRITE_ADDRESS, unsigned char DATA)
  { 
  	short i;
  	switch (READ_WRITE_ADDRESS)
  	{
  		case 1:
  			DATA = DATA & 0x87;
  		break;
  		case 2:
  			DATA = DATA & 0xFB;
  			DATA |= 0x80;
  			
  		break;
  		case 3:
  			DATA = DATA & 0xFD;
  			DATA |= 0x10;
  			
  		break;
  		case 7:
  			DATA = DATA & 0x3F;
  		break;
  		case 8:
  			DATA = DATA & 0x5F;
  		break;
  		case 9:
  			DATA |= 0x02;
  		break;
  		case 10:
  			DATA = DATA & 0x87;
  			DATA |= 0x01;
  		break;
  		case 11:
  			DATA = DATA & 0x0F;
  		break;
  		
  		default:
  		
  		break;
  		
  	}
	SPI_Tx_buf[0] = READ_WRITE_ADDRESS | WREG;
	SPI_Tx_buf[1] = 0;						// Write Single byte
	SPI_Tx_buf[2] = DATA;					// Write Single byte
	Set_ADS1x9x_Chip_Enable();
	
	for ( i =0; i < 50;i++);

	UCB0TXBUF = SPI_Tx_buf[0];              // Send the first data to the TX Buffer
 	while ( (UCB0STAT & UCBUSY) );			// USCI_B0 TX buffer ready?
	i = UCB0RXBUF;							// Read Rx buf

	UCB0TXBUF = SPI_Tx_buf[1];              // Send the first data to the TX Buffer
	while ( (UCB0STAT & UCBUSY) );			// USCI_B0 TX buffer ready?
	i = UCB0RXBUF;
	UCB0TXBUF = SPI_Tx_buf[2];              // Send the first data to the TX Buffer
	while ( (UCB0STAT & UCBUSY) );			// USCI_B0 TX buffer ready?
	i = UCB0RXBUF;

  }

  unsigned char ADS1x9x_Reg_Read(unsigned char Reg_address)
  {
  		unsigned char retVal;
		SPI_Tx_buf[0] = Reg_address | RREG;
		SPI_Tx_buf[1] = 0;							// Read number of bytes - 1
		
		Set_ADS1x9x_Chip_Enable();					// Set chip select to low
		
		UCB0TXBUF = SPI_Tx_buf[0];                  // Send the first data to the TX Buffer
		while ( (UCB0STAT & UCBUSY) );				// USCI_B0 TX buffer ready?
		UCB0TXBUF = SPI_Tx_buf[1];                  // Send the first data to the TX Buffer
		while ( (UCB0STAT & UCBUSY) );				// USCI_B0 TX buffer ready?
		retVal = UCB0RXBUF;							// Read RX buff
		UCB0TXBUF = 0x00;                           // Send the first data to the TX Buffer
		while ( (UCB0STAT & UCBUSY) );				// USCI_B0 TX buffer ready?
		retVal = UCB0RXBUF;							// Read RX buff

		Clear_ADS1x9x_Chip_Enable();				// Disable chip select
		return 	retVal;
  }
