==> wzyy2/ECG-BLE/firmware/ECG/CC26xx/Source/Application/ADS1x9x.c <==
#include <ti/drivers/pin/PINCC26XX.h>
#include <ti/drivers/SPI.h>
#include <ti/sysbios/knl/Task.h>
#include <ti/sysbios/knl/Clock.h>
#include <ti/sysbios/knl/Semaphore.h>
#include <ti/sysbios/knl/Queue.h>
#include <ti/sysbios/BIOS.h>
#include "ADS1x9x.h"
#include "bsp_spi.h"
#include "ecg.h"
#include "fifo.h"
#define DELAY_COUNT 2
#define ADS_START                   IOID_6
#define ADS_RESET                   IOID_5
#define ADS_DRDY                    IOID_3
#define ADS_MISO                     IOID_2          /* RF1.20 */
#define ADS_MOSI                     IOID_1          /* RF1.18 */
#define ADS_CLK                      IOID_0          /* RF1.16 */
#define ADS_CSN                      IOID_4          /* RF1.14 */

void ADS1x9x_Reset(void)
{
  PIN_setOutputValue(hecgPins, ADS_RESET , 1);
  //P8OUT |= (enum PORT8_ADC_CONTROL)ADC_RESET;		// Set High
  /* Provide suficient dealy*/
  Task_sleep(2);	// Wait 1 mSec
  PIN_setOutputValue(hecgPins, ADS_RESET , 0);    
  //P8OUT &= ~(enum PORT8_ADC_CONTROL)ADC_RESET;	// Set to low
  Task_sleep(2);				    // Wait 1 mSec
  PIN_setOutputValue(hecgPins, ADS_RESET , 1);
  //P8OUT |= (enum PORT8_ADC_CONTROL)ADC_RESET;		// Set High
  Task_sleep(2);
}

void ADS1x9x_Disable_Start(void)
{
  PIN_setOutputValue(hecgPins, ADS_START , 0);
  //P8OUT &= ~(enum PORT8_ADC_CONTROL)ADC_START;	// Set to LOW
  Task_sleep(1);   					// Small Delay to settle   
}

void ADS1x9x_Enable_Start(void)
{
  PIN_setOutputValue(hecgPins, ADS_START , 1);
  //P8OUT |= (enum PORT8_ADC_CONTROL)ADC_START;		// Set to High
  Task_sleep(1);   					// Small Delay to settle   
}

void Set_ADS1x9x_Chip_Enable (void)
{
  /* ADS1x9x CS is Active low*/
  PIN_setOutputValue(hecgPins, ADS_CSN , 0);
  //P8OUT &= ~(enum PORT8_ADC_CONTROL)ADC_CS;		// Set to LOW
}

void Clear_ADS1x9x_Chip_Enable (void)
{
  blocking_delay(10);	
  /* ADS1x9x CS is Active low*/
  PIN_setOutputValue(hecgPins, ADS_CSN , 1);
  //P8OUT |= (enum PORT8_ADC_CONTROL)ADC_CS;		// Set to High
}

void Init_ADS1x9x_DRDY_Interrupt (void)
{
  // Register ISR
  PIN_registerIntCb(hecgPins, drdy_isr);
  PIN_setConfig(hecgPins, PIN_BM_IRQ, ADS_DRDY | PIN_IRQ_DIS);
  
  //P1DIR &= ~0x02;
  //P1REN |= BIT1;                            	// Enable P1.1 internal resistance
  //P1OUT |= BIT1;                            	// Set P1.1 as pull-Up resistance
  //P1IES |= BIT1;                           		// P1.1 Lo/Hi edge
  //P1IFG &= ~BIT1;                           	// P1.1 IFG cleared
  //P1IE &= ~BIT1;                             	// P1.1 interrupt disabled
  
}

void Enable_ADS1x9x_DRDY_Interrupt (void)
{
  PIN_setConfig(hecgPins, PIN_BM_IRQ, ADS_DRDY | PIN_IRQ_NEGEDGE);
  //P1IFG &= ~BIT1;                           	// P1.1 IFG cleared
  //P1IE |= BIT1;                             	// P1.1 interrupt enabled
}

void Disable_ADS1x9x_DRDY_Interrupt (void)
{
  PIN_setConfig(hecgPins, PIN_BM_IRQ, ADS_DRDY | PIN_IRQ_DIS);
  //P1IFG &= ~BIT1;                           	// P1.1 IFG cleared
  //P1IE &= ~BIT1;                             	// P1.1 interrupt disabled
}

void Set_GPIO(void)
{
  // Open pin structure for use
  hecgPins = PIN_open(&ecgPins, ecgPinsCfg);
  PIN_setOutputValue(hecgPins, ADS_CSN , 1);
  PIN_setOutputValue(hecgPins, ADS_START , 0);
  PIN_setOutputValue(hecgPins, ADS_RESET , 0);
  // Register ISR
  //PIN_registerIntCb(hecgPins, buttonHwiFxn);
  // Configure interrupt
  //PIN_setConfig(hSbpPins, PIN_BM_IRQ, Board_KEY_UP | PIN_IRQ_NEGEDGE);
  // Enable wakeup
  //PIN_setConfig(hSbpPins, PINCC26XX_BM_WAKEUP, Board_KEY_UP|PINCC26XX_WAKEUP_NEGEDGE);  
  
  /*
  P2SEL = 0x00;                            
  P2DIR |= 0x8F;
  P2OUT |= (enum PORT2_ADC_CONTROL)POW_CE;                            
  P8DIR |= 0x07;       
  P8OUT &= 0xF8;
  P8OUT |= (enum PORT8_ADC_CONTROL)ADC_CS;		// Set RESET, START to Low and CS to High
  P8OUT |= (enum PORT8_ADC_CONTROL)ADC_RESET;	// Set RESET, START to Low and CS to High
  P2OUT = 0x03;
  */
  //dataCnt = 0;
  
}

void ADS1x9x_SPI_Command_Data(unsigned char Data)
{
  Set_ADS1x9x_Chip_Enable();	
  Clear_ADS1x9x_Chip_Enable();
  Set_ADS1x9x_Chip_Enable();
  
  bspSpiWrite(&Data, 1);      // Send the data sitting at the pointer DATA to the TX Buffer
  
  blocking_delay(10);	
  
}

void Hard_Start_ReStart_ADS1x9x(void)
{
  PIN_setOutputValue(hecgPins, ADS_START , 1);
  //P8OUT |= (enum PORT8_ADC_CONTROL)ADC_START;			// Set Start pin to High
}

void Hard_Stop_ADS1x9x (void)
{
  PIN_setOutputValue(hecgPins, ADS_START , 0);
  //P8OUT &= ~(enum PORT8_ADC_CONTROL)ADC_START;		// Set Start pin to Low
  Task_sleep(1);
}

void ADS1x9x_Reg_Write (unsigned char READ_WRITE_ADDRESS, unsigned char DATA)
{ 
  
  switch (READ_WRITE_ADDRESS)
  {
  case 1:
    DATA = DATA & 0x87;
    break;
  case 2:
    DATA = DATA & 0xFB;
    DATA |= 0x80;
    
    break;
  case 3:
    DATA = DATA & 0xFD;
    DATA |= 0x10;
    
    break;
  case 7:
    DATA = DATA & 0x3F;
    break;
  case 8:
    DATA = DATA & 0x5F;
    break;
  case 9:
    DATA |= 0x02;
    break;
  case 10:
    DATA = DATA & 0x87;
    DATA |= 0x01;
    break;
  case 11:
    DATA = DATA & 0x0F;
    break;
    
  default:
    
    break;
    
  }
  SPI_Tx_buf[0] = READ_WRITE_ADDRESS | WREG;
  SPI_Tx_buf[1] = 0;						// Write Single byte
  SPI_Tx_buf[2] = DATA;					// Write Single byte
  Set_ADS1x9x_Chip_Enable();
  
  blocking_delay(10);	
  
  bspSpiWrite(SPI_Tx_buf, 1);
  bspSpiWrite(SPI_Tx_buf + 1, 1);
  bspSpiWrite(SPI_Tx_buf + 2, 1);
  /*
  UCB0TXBUF = SPI_Tx_buf[0];              // Send the first data to the TX Buffer
  while ( (UCB0STAT & UCBUSY) );			// USCI_B0 TX buffer ready?
  i = UCB0RXBUF;							// Read Rx buf
  
  UCB0TXBUF = SPI_Tx_buf[1];              // Send the first data to the TX Buffer
  while ( (UCB0STAT & UCBUSY) );			// USCI_B0 TX buffer ready?
  i = UCB0RXBUF;
  UCB0TXBUF = SPI_Tx_buf[2];              // Send the first data to the TX Buffer
  while ( (UCB0STAT & UCBUSY) );			// USCI_B0 TX buffer ready?
  i = UCB0RXBUF;
  */
}

unsigned char ADS1x9x_Reg_Read(unsigned char Reg_address)
{
  unsigned char retVal;

  SPI_Tx_buf[0] = Reg_address | RREG;
  SPI_Tx_buf[1] = 0;							// Read number of bytes - 1
  SPI_Tx_buf[2] = 0;	
  
  Set_ADS1x9x_Chip_Enable();					// Set chip select to low
  
  bspSpiWrite(SPI_Tx_buf, 1);
  bspSpiWrite(SPI_Tx_buf + 1, 1);
  bspSpiRead(SPI_Tx_buf, 1);
  
  //bspSpiWriteRead(SPI_Tx_buf, 2, 1);
  
  retVal = SPI_Tx_buf[0];  
  /* 
  UCB0TXBUF = SPI_Tx_buf[0];                  // Send the first data to the TX Buffer
  while ( (UCB0STAT & UCBUSY) );				// USCI_B0 TX buffer ready?
  UCB0TXBUF = SPI_Tx_buf[1];                  // Send the first data to the TX Buffer
  while ( (UCB0STAT & UCBUSY) );				// USCI_B0 TX buffer ready?
  retVal = UCB0RXBUF;							// Read RX buff
  UCB0TXBUF = 0x00;                           // Send the first data to the TX Buffer
  while ( (UCB0STAT & UCBUSY) );				// USCI_B0 TX buffer ready?
  retVal = UCB0RXBUF;							// Read RX buff
  */
  
  Clear_ADS1x9x_Chip_Enable();				// Disable chip select
  return 	retVal;
}
